tests/fixtures/invalid/round_int_list.py
# Cannot call round() with Int, List[int]
x = round(1, [1, 2, 3])
